@@ -13,7 +13,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
@@ -137,7 +136,7 @@ public class DocumentService {
      * Save uploaded file to disk
      */
     private File saveFile(MultipartFile file) throws IOException {
-        Path uploadPath = Paths.get(uploadDir);
+        Path uploadPath = Path.of(uploadDir);
         
         if (!Files.exists(uploadPath)) {
             Files.createDirectories(uploadPath);
